# libsgl

./: .gitignore  .gitmodules  CMakeLists.txt  FindSDL2.cmake  README.md
cmake/: AddGoogleTest.cmake  FindSDL2_gfx.cmake  magic_enum-download.cmake  magic_enum.cmake
engine/: boost_convert.h
engine/core/: Camera.cpp  Camera.h  Consumer.cpp  Consumer.h  Message.cpp  Message.h  MessageSystem.h  Music.cpp  Music.h  RayCastHit.cpp  RayCastHit.h  RayCastResult.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  StaticCollisionBlock.h  Timer.cpp  Timer.h  dispatcher.h  gamewindow.cpp  gamewindow.h  input.cpp  input.h  renderer.cpp  renderer.h
engine/core/ecs/: Component.cpp  Component.h  Entity.cpp  Entity.h  ScriptComponent.h
engine/graphics/: Animation.h  Animator.h  ChildTexture.cpp  ChildTexture.h  TextAnimation.cpp  TextAnimation.h  TextureAnimation.cpp  TextureAnimation.h  TextureManager.cpp  TextureManager.h  TextureMapAnimation.cpp  TextureMapAnimation.h  gameobject.cpp  gameobject.h  rect.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.cpp  texture.h  texturemap.cpp  texturemap.h
engine/paths/: dijkstra.cpp  dijkstra.h
engine/physics/: BoxShape.h  PhysicsBody.cpp  PhysicsBody.h
engine/ui/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  ComboBox.cpp  ComboBox.h  Container.cpp  Container.h  Hint.cpp  Hint.h  ImageButton.cpp  ImageButton.h  KeyCodeInputItem.cpp  KeyCodeInputItem.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  NumberTextItem.cpp  NumberTextItem.h  Object.cpp  Object.h  ProgressBar.cpp  ProgressBar.h  StringHint.cpp  StringHint.h  Tab.cpp  Tab.h  TabBar.cpp  TabBar.h  Table.cpp  Table.h  TextItem.cpp  TextItem.h  Theme.cpp  Theme.h  VerticalScrollbar.cpp  VerticalScrollbar.h  Window.cpp  Window.h  (+6 more)
engine/ui/dialogs/: MessageDialog.cpp  MessageDialog.h
engine/ui/layout/: GridLayout.cpp  GridLayout.h  Layout.cpp  Layout.h
engine/utils/: IniBase.cpp  IniBase.h  PerformanceLogger.cpp  PerformanceLogger.h  base64.cpp  base64.h  color.cpp  color.h  exceptions.h  localisation.cpp  localisation.h  logger.cpp  logger.h  os.cpp  os.h  perlinnoise.cpp  perlinnoise.h  string.cpp  string.h  temperature.cpp  temperature.h  textloader.cpp  textloader.h  textparser.cpp  textparser.h  vector2.cpp  vector2.h
engine/utils/json/: Lexer.cpp  Lexer.h  Token.h  jsonservice.h  object.cpp  object.h  parser.cpp  parser.h  valuetype.cpp  valuetype.h
engine/utils/time/: date.cpp  date.h  time.cpp  time.h
tests/: CMakeLists.txt  json_parser_test.cpp
tests/test_files/: demo.json  savegame.save  savegame2.save
